# espBMP

./: .gitignore  .gitmodules  CMakeLists.txt  blackmagic.cmake  build.sh  platformConfig.cmake  sdkconfig
bridge/include/: platform.h
bridge/src/: bmp_gpio.cpp  bridge.cpp
script/: config.sh  run-esp32.sh
src/: main.cpp
